2007-05-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : uniform font handling
	* interfaces/R/igraph/plot.common.R (i.default.values) : font options added
	* interfaces/R/igraph/tkplot.R (tkplot) : uniform font handling
	(.tkplot.convert.font) : added

2007-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.air) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_air) : added

	* interfaces/R/igraph/R/revolver.R (evolver.ir) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_ir) : added

	* interfaces/R/igraph/R/revolver.R (evolver.il) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_il) : added

2007-04-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_progress_handler)
	(R_igraph_before2) : new progress handler
	(R_igraph_layout_kamada_kawai, R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold_grid)
	(R_igraph_layout_fruchterman_reingold)
	(R_igraph_layout_fruchterman_reingold_3d)
	(R_igraph_layout_merge_dla) : updated to new progress handler

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad)
	(evolver.ade, evolver.e, evolver.de, evolver.l, evolver.dl)
	(evolver.el, evolver.r, evolver.ar, evolver.di, evolvecr.adi) :
	verbose option added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d)
	(R_igraph_evolver_ad, R_igraph_evolver_ade, R_igraph_evolver_e)
	(R_igraph_evolver_de, R_igraph_evolver_l, R_igraph_evolver_dl)
	(R_igraph_evolver_el, R_igraph_evolver_r, R_igraph_evolver_ar)
	(R_igraph_evolver_r, R_igraph_evolver_ar, R_igraph_evolver_di)
	(R_igraph_evolver_adi) : verbose option added
	
	* interfaces/R/src/rinterface.c 
	(R_igraph_before2, R_igraph_after2): added

2007-04-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.adi) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_adi) : added

2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>
