@@ -1,5 +1,10 @@
 2007-05-04  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/plot.R
+	* interfaces/R/igraph/R/plot.common.R
+	* interfaces/R/igraph/R/tkplot.R : different parameters for 
+	vertex and edge labels
+
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : uniform font handling
 	* interfaces/R/igraph/plot.common.R (i.default.values) : font options added
 	* interfaces/R/igraph/tkplot.R (tkplot) : uniform font handling
